Fixed jumping form input fields

--- a/client/design/sass/modules/_forms.scss
+++ b/client/design/sass/modules/_forms.scss
@@ -9,8 +9,10 @@ textarea{
 	font-size: 1em;
 
 	border: none;
+	border-bottom: 0.2em solid $lightBackgroundGray;
 	border-radius: 0.3em;
 
+	//
 	font-family: 'Montserrat-UltraLight';
 
 	// Standarts resetten
